fixed some spacing

--- a/awards.css
+++ b/awards.css
@@ -49,7 +49,9 @@ table  {
 
     border: 1px solid white;
     background-color: darkred;
-    margin-left: auto;
+
+  margin-top:100px;
+    margin-left: 500px;
     margin-right: auto;
 }
 caption {
@@ -65,6 +67,6 @@ caption {
 }
 #login{
     float: right;
-    padding-right: 30px;
+
 
 }
